# sav-client

./: .env.example  .gitignore  README.md  pyproject.toml
sav_cli/: AGENTS.md  __init__.py  cache.py  cli.py
sav_client/: AGENTS.md  __init__.py  cache.py  exceptions.py  models.py  sav_client.py  utils.py
sav_mcp/: AGENTS.md  authz.py  authz.toml  server.py
sav_shared/: __init__.py  clubs.py  enrollment.py  fields.py  files.py  fpb_mod1.py  games.py  lookups.py  medical_exam.py  serializers.py  text.py
tests/: conftest.py  test_associations.py  test_batch_resolver.py  test_classify_enrollment_status.py  test_cli_clubs.py  test_cli_enrollment.py  test_cli_players.py  test_clubs.py  test_coaches.py  test_document_upload.py  test_enrollment_helpers.py  test_game_sheet.py  test_games.py  test_load_existing_registration_record.py  test_login.py  test_mcp_documents.py  test_mcp_enrollment.py  test_mcp_enrollment_status.py  test_mcp_find_player_by_nif.py  test_mcp_games.py  test_mcp_roster.py  test_mcp_session.py  test_player_detail.py  test_registration_batches.py  test_search_players.py  test_tier_birth_years.py
