[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sav-client"
version = "0.53.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "click>=8.0",
    "rapidfuzz>=3.9",
    "mcp>=1.0",
    "img2pdf>=0.5",
    "pikepdf>=8",
    "sav-parsers @ git+https://github.com/jfloff/sav-parsers.git@main",
]

[project.scripts]
sav = "sav_cli.cli:main"
sav-mcp = "sav_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sav_client*", "sav_cli*", "sav_mcp*", "sav_shared*"]

[tool.setuptools.package-data]
sav_client = ["AGENTS.md"]
sav_cli = ["AGENTS.md"]
sav_mcp = ["AGENTS.md"]
